--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,11 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>UI KIT</title>
    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-   <!-- плагин -->
-   @@include("parts/header.html") 
-
-
-   <h1 class="h1"> Базовая сборка </h1>
-   
-   <p class="p">Со временем будет дополняться</p>
-   <div class="article">
-   @@loop("parts/templateData.html", "../data/testdata.json")
-   </div>
-
-   <div class="testImg">
-      <img src="img/test3.jpg" alt="">
-   </div>
-
-   <div class="testImgCss"></div>
-
-   @@include("parts/footer.html")
+   @@include("parts/colors.html") 
 <script src="js/main.js"></script>
 </body>
 </html>
