--- a/src/parts/colors.html
+++ b/src/parts/colors.html
@@ -1,7 +1,9 @@
 <section class="colors">
-   <div class="colors__wrap">
+   <h2 class="title">Colors</h2>
+   <div class="colors__inner inner">
+     
       <div class="colors__column">
-         <h2 class="colors__title title">Colors</h2>
+         <h3 class="colors__title text">Colors</h3>
          <ul class="colors__list">
             <li class="colors__item _black"></li>
             <li class="colors__item _grey"></li>
@@ -12,7 +14,7 @@
          </ul>
       </div>
       <div class="colors__column">
-         <h2 class="colors__title title">Forms</h2>
+         <h3 class="colors__title text">Forms</h3>
          <ul class="colors__list">
             <li class="colors__item _form-base"></li>
             <li class="colors__item _form-accent"></li>
@@ -20,7 +22,7 @@
          </ul>
       </div>
       <div class="colors__column">
-         <h2 class="colors__title title">Elevation</h2>
+         <h2 class="colors__title text">Elevation</h3>
          <ul class="colors__list">
             <li class="colors__item _elevation _1"></li>
             <li class="colors__item _elevation _2"></li>
