--- a/src/parts/forms.html
+++ b/src/parts/forms.html
@@ -1,3 +1,74 @@
 <section class="forms">
-dfdffdds
+  <h2 class="title">Inputs</h2>
+  <div class="forms__inner inner">
+    <div class="input__wrapper">   
+      <div class="input__withLabel">
+
+        <div class="input__item _default">
+          <span class="input__label text">Input Basic</span>
+          <input type="text" placeholder="Placeholder">
+        </div>
+
+        <div class="input__item _error">
+          <span class="input__label text">Input Error</span>
+          <input type="text" placeholder="Value">
+        </div>
+
+        <div class="input__item _focused">
+          <span class="input__label text">Input Focused</span>
+          <input type="text" placeholder="Value"> 
+        </div>
+
+        <div class="input__item _disabled">
+          <span class="input__label text">Input Disabled</span>
+          <input type="text" placeholder="Value" disabled>
+        </div>
+      </div>
+
+      <div class="input__noLabel">
+
+        <div class="input__item _default">
+          <input type="text" placeholder="Placeholder">
+        </div>
+
+        <div class="input__item _error">
+          <input type="text" placeholder="Value">
+        </div>
+
+        <div class="input__item _focused">
+          <input type="text" placeholder="Value"> 
+        </div>
+
+        <div class="input__item _disabled">
+
+          <input type="text" placeholder="Value" disabled>
+        </div>
+      </div>
+
+      <div class="input__icons">
+
+        <div class="input__item _left">
+            <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.4834 9.18645L10.2381 9.53097L10.5371 9.83005L14.3535 13.6465C14.5488 13.8417 14.5488 14.1583 14.3535 14.3535C14.1583 14.5488 13.8417 14.5488 13.6465 14.3535L9.83005 10.5371L9.53097 10.2381L9.18645 10.4834C8.28755 11.1236 7.18845 11.5 6 11.5C2.96243 11.5 0.5 9.03756 0.5 6C0.5 2.96243 2.96243 0.5 6 0.5C9.03756 0.5 11.5 2.96243 11.5 6C11.5 7.18845 11.1236 8.28755 10.4834 9.18645ZM6 1.5C3.51472 1.5 1.5 3.51472 1.5 6C1.5 8.48524 3.51471 10.5 6 10.5C8.48524 10.5 10.5 8.48524 10.5 6C10.5 3.51471 8.48524 1.5 6 1.5Z" fill="#2C2C2C" stroke="#2C2C2C"/>
+            </svg>
+          <input type="search" placeholder="Placeholder">
+        </div>
+
+        <div class="input__item _right">
+          <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10.4834 9.18645L10.2381 9.53097L10.5371 9.83005L14.3535 13.6465C14.5488 13.8417 14.5488 14.1583 14.3535 14.3535C14.1583 14.5488 13.8417 14.5488 13.6465 14.3535L9.83005 10.5371L9.53097 10.2381L9.18645 10.4834C8.28755 11.1236 7.18845 11.5 6 11.5C2.96243 11.5 0.5 9.03756 0.5 6C0.5 2.96243 2.96243 0.5 6 0.5C9.03756 0.5 11.5 2.96243 11.5 6C11.5 7.18845 11.1236 8.28755 10.4834 9.18645ZM6 1.5C3.51472 1.5 1.5 3.51472 1.5 6C1.5 8.48524 3.51471 10.5 6 10.5C8.48524 10.5 10.5 8.48524 10.5 6C10.5 3.51471 8.48524 1.5 6 1.5Z" fill="#2C2C2C" stroke="#2C2C2C"/>
+            </svg>
+          <input type="search" placeholder="Placeholder">
+        </div>
+
+        <div class="input__item _dots">
+          <span>
+            www.
+          </span>
+          <input type="search" placeholder="2dots.co"> 
+        </div>
+      </div>
+  </div>
+
+</div>
 </section>
