--- a/src/parts/forms.html
+++ b/src/parts/forms.html
@@ -68,7 +68,31 @@
           <input type="search" placeholder="2dots.co"> 
         </div>
       </div>
-  </div>
+    </div>
 
-</div>
+    <div class="textarea__wrapper">
+      <div class="textarea__item">
+        <h3 class="textarea__label text">Textarea</h3>
+        <textarea  name="default" id="1" cols="30" rows="10" placeholder="Placeholder"></textarea>
+      </div>
+      <div class="textarea__item _error">
+        <h3 class="textarea__label text">Textarea</h3>
+        <textarea  name="error" id="1" cols="30" rows="10" placeholder="Value"></textarea>
+      </div>
+    </div>
+
+    <div class="option__wrapper">
+      <div class="select__item">
+        <h3 class="select__label text">Please choose:</h3>
+       <select name="select1" id="1">
+         <option value="">option 1</option>
+         <option value="">option 2</option>
+         <option value="">option 3</option>
+         <option value="">option 4</option>
+         <option value="">option 5</option>
+       </select>
+      </div>
+    </div>
+
+  </div>
 </section>
