feat: custom select

--- a/src/parts/forms.html
+++ b/src/parts/forms.html
@@ -82,15 +82,12 @@
     </div>
 
     <div class="option__wrapper">
-      <div class="select__item">
-        <h3 class="select__label text">Please choose:</h3>
-       <select name="select1" id="1">
-         <option value="">option 1</option>
-         <option value="">option 2</option>
-         <option value="">option 3</option>
-         <option value="">option 4</option>
-         <option value="">option 5</option>
-       </select>
+      <div class="select-item">
+        <h3 class="select-item__label text">Please choose:</h3>
+
+       <div id="elemId">
+
+       </div>
       </div>
     </div>
 
