feat: finised select

--- a/src/parts/forms.html
+++ b/src/parts/forms.html
@@ -85,9 +85,7 @@
       <div class="select-item">
         <h3 class="select-item__label text">Please choose:</h3>
 
-       <div id="elemId">
-
-       </div>
+       <div class="select" id="elemId"></div>
       </div>
     </div>
 
